# camino-tempfile

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  release.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/camino-tempfile/: CHANGELOG.md  Cargo.toml  README.md
crates/camino-tempfile-ext/: CHANGELOG.md  Cargo.toml  README.md
crates/camino-tempfile-ext/src/: assert.rs  color.rs  lib.rs
crates/camino-tempfile-ext/src/fixture/: child.rs  errors.rs  mod.rs  tools.rs
crates/camino-tempfile-ext/tests/: assert.rs
crates/camino-tempfile/src/: builder.rs  dir.rs  file.rs  lib.rs
crates/camino-tempfile/tests/: namedtempfile.rs  tempdir.rs  tempfile.rs
rustdoc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
rustdoc/camino/: all.html  enum.Utf8Component.html  enum.Utf8Prefix.html  index.html  struct.FromPathBufError.html  struct.FromPathError.html  struct.Iter.html  struct.ReadDirUtf8.html  struct.Utf8Ancestors.html  struct.Utf8Components.html  struct.Utf8DirEntry.html  struct.Utf8Path.html  struct.Utf8PathBuf.html  struct.Utf8PrefixComponent.html
rustdoc/camino_tempfile/: all.html  fn.tempdir.html  fn.tempdir_in.html  fn.tempfile.html  fn.tempfile_in.html  index.html  struct.Builder.html  struct.NamedUtf8TempFile.html  struct.Utf8PathPersistError.html  struct.Utf8PersistError.html  struct.Utf8TempDir.html  struct.Utf8TempPath.html
rustdoc/io_lifetimes/views/: trait.SocketlikeViewType.html
rustdoc/linux_raw_sys/: all.html  index.html
rustdoc/linux_raw_sys/general/: constant.AF_APPLETALK.html  constant.AF_ASH.html  constant.AF_ATMPVC.html  constant.AF_ATMSVC.html  constant.AF_AX25.html  constant.AF_BLUETOOTH.html  constant.AF_BRIDGE.html  constant.AF_CAN.html  constant.AF_DECnet.html  constant.AF_ECONET.html  constant.AF_IEEE802154.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_IPX.html  constant.AF_IRDA.html  constant.AF_ISDN.html  constant.AF_IUCV.html  constant.AF_KEY.html  constant.AF_LLC.html  constant.AF_MAX.html  constant.AF_NETBEUI.html  constant.AF_NETLINK.html  constant.AF_NETROM.html  constant.AF_PACKET.html  constant.AF_PHONET.html  constant.AF_PPPOX.html  constant.AF_RDS.html  constant.AF_ROSE.html  constant.AF_RXRPC.html  constant.AF_SECURITY.html  constant.AF_SNA.html  constant.AF_TIPC.html  constant.AF_UNIX.html  constant.AF_UNSPEC.html  constant.AF_WANPIPE.html  constant.AF_X25.html  constant.ARCH_SET_FS.html  constant.DEVCONF_ACCEPT_DAD.html  constant.DEVCONF_ACCEPT_RA.html  constant.DEVCONF_ACCEPT_RA_DEFRTR.html  (+750 more)
rustdoc/rustix/: all.html  index.html
rustdoc/rustix/ffi/: struct.CStr.html  struct.CString.html
rustdoc/rustix/fs/: constant.CWD.html  constant.NFS_SUPER_MAGIC.html  constant.PROC_SUPER_MAGIC.html  constant.UTIME_NOW.html  constant.UTIME_OMIT.html  enum.Advice.html  enum.FileType.html  enum.FlockOperation.html  enum.SeekFrom.html  fn.access.html  fn.accessat.html  fn.bind_mount.html  fn.change_mount.html  fn.chmod.html  fn.chmodat.html  fn.chmodat_with.html  fn.chown.html  fn.chownat.html  fn.copy_file_range.html  fn.cwd.html  fn.ext4_ioc_resize_fs.html  fn.fadvise.html  fn.fallocate.html  fn.fchmod.html  fn.fchown.html  fn.fcntl_add_seals.html  fn.fcntl_dupfd_cloexec.html  fn.fcntl_get_seals.html  fn.fcntl_getfd.html  fn.fcntl_getfl.html  fn.fcntl_lock.html  fn.fcntl_setfd.html  fn.fcntl_setfl.html  fn.fdatasync.html  fn.fgetxattr.html  fn.flistxattr.html  fn.flock.html  fn.fremovexattr.html  fn.fsetxattr.html  fn.fstat.html  (+97 more)
rustdoc/rustix/io/: index.html  struct.DupFlags.html  struct.EventfdFlags.html  struct.FdFlags.html  struct.PipeFlags.html  struct.PollFlags.html  struct.ReadWriteFlags.html  (+1 more)
rustdoc/tempfile/: struct.NamedTempFile.html  struct.PersistError.html
src/: builder.rs  dir.rs  errors.rs  file.rs  helpers.rs  lib.rs
tests/: namedtempfile.rs  tempdir.rs  tempfile.rs
(+193 files in other folders)
