[package]
name = "camino-tempfile"
version = "1.1.1"
edition = "2021"
rust-version = "1.63"
license = "MIT OR Apache-2.0"
description = "A library for managing temporary files and directories, with UTF-8 paths."
readme = "README.md"
repository = "https://github.com/camino-rs/camino-tempfile"
documentation = "https://docs.rs/camino-tempfile"
keywords = ["tempfile", "tmpfile", "filesystem", "camino"]
categories = ["filesystem", "os"]

[dependencies]
camino = "1.1.4"
tempfile = "3.8.1"

[dev-dependencies]
fastrand = "2.0.1"

[features]
nightly = ["tempfile/nightly"]
