[package]
name = "camino-tempfile-ext"
version = "0.3.1"
rust-version = "1.74"
edition.workspace = true
license.workspace = true
description = "Quality-of-life extensions for camino-tempfile"
readme = "README.md"
repository.workspace = true
keywords = ["tempfile", "tmpfile", "filesystem", "camino"]
categories = ["filesystem", "os"]

[package.metadata.cargo-sync-rdme.rustdoc]
html-root-url = "https://camino-rs.github.io/camino-tempfile"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]

[lints]
workspace = true

[dependencies]
anstream = { workspace = true, optional = true }
anstyle = { workspace = true, optional = true }
camino.workspace = true
camino-tempfile.workspace = true
globwalk.workspace = true
predicates = { workspace = true, optional = true }
predicates-core = { workspace = true, optional = true }
predicates-tree = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true

[features]
assert = ["dep:predicates", "dep:predicates-core", "dep:predicates-tree"]
assert-color = ["assert", "dep:anstream", "dep:anstyle", "predicates/color"]
